--- a/pierres.css
+++ b/pierres.css
@@ -14,3 +14,30 @@ html {height: 100%;}
   color: #555;
 }
 
+
+#loader {
+    /*
+    */
+    left: 300px;
+    top: 300px;
+    position: absolute;
+    height: 90px; 
+    z-index: 5;
+    background-color: white;
+    padding: 1em;
+    opacity: 0.7;
+    border-radius: 15px;
+}
+
+#loader>p {
+    position: relative;
+    display: inline;
+    top: -2em;
+    font-size: 20px;
+}
+
+#loader>img {
+    margin-right: 5em;
+    height: 90px;
+    width: 90px;
+}
