--- a/pierres.css
+++ b/pierres.css
@@ -1,39 +1,43 @@
-#map {height: 100%; }
-body {margin:0; height: 100%;}
-body>div { height: 100%}
-html {height: 100%;}
-
-.info {
-  padding: 6px 8px;
-  background: white;
-  background: rgba(255,255,255,0.8);
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  min-width: 390px;
-  text-align: left;
-  line-height: 18px;
-  color: #555;
+#map {
+    height: 100%;
 }
-
-
+body {
+    margin: 0;
+    height: 100%;
+}
+body>div {
+    height: 100%
+}
+html {
+    height: 100%;
+}
+.info {
+    padding: 6px 8px;
+    background: white;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    min-width: 390px;
+    text-align: left;
+    line-height: 18px;
+    color: #555;
+}
 #loader {
     left: 40%;
     top: 30%;
     position: absolute;
-    height: 90px; 
+    height: 90px;
     z-index: 5;
     background-color: white;
     padding: 1em;
     opacity: 0.7;
     border-radius: 15px;
 }
-
 #loader>p {
     position: relative;
     display: inline;
     top: -2em;
     font-size: 20px;
 }
-
 #loader>img {
     margin-right: 5em;
     height: 90px;
