--- a/pierres.css
+++ b/pierres.css
@@ -1,45 +1,37 @@
-#map {
-    height: 100%;
-}
 body {
     margin: 0;
     height: 100%;
 }
-body>div {
-    height: 100%
-}
 html {
     height: 100%;
 }
-.info {
-    padding: 6px 8px;
-    background: white;
-    background: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    min-width: 390px;
-    text-align: left;
-    line-height: 18px;
-    color: #555;
+#content {
+    z-index: 1;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+#map {
+    height: 100%;
 }
 #loader {
-    left: 40%;
-    top: 30%;
-    position: absolute;
-    height: 90px;
     z-index: 5;
-    background-color: white;
-    padding: 1em;
+    /*  center among #content */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    /* appearance */
     opacity: 0.7;
+    background-color: white;
+    border: solid 1px black;
     border-radius: 15px;
-}
-#loader>p {
-    position: relative;
-    display: inline;
-    top: -2em;
-    font-size: 20px;
-}
-#loader>img {
-    margin-right: 5em;
-    height: 90px;
-    width: 90px;
+    padding: 2em;
+    width: 200px;
+    height: 200px;
 }
