--- a/pierres.css
+++ b/pierres.css
@@ -18,6 +18,7 @@ html {
     height: 100%;
 }
 #loader {
+    display:none;
     z-index: 5;
     /*  center among #content */
     position: absolute;
